src/features/hover/snapshots/texlab__features__hover__citation__tests__inside_entry.snap
---
source: src/features/hover/citation.rs
assertion_line: 119
expression: actual_hover
---
Hover {
    contents: Markup(
        MarkupContent {
            kind: Markdown,
            value: "F. Bar: \"Baz Qux\". (1337).",
        },
    ),
    range: Some(
        Range {
            start: Position {
                line: 0,
                character: 9,
            },
            end: Position {
                line: 0,
                character: 12,
            },
        },
    ),
}
